    
       
o   Andrew Bartlet <abartlet@samba.org>

    
o   Alexander Bokovoy <ab@samba.org>
      
      
o   Gerald (Jerry) Carter <jerry@samba.org>
    * Fix server connection code in rpcclient.


o   Volker Lendecke <vl@samba.org>
      
      
o   Herb Lewis <herb@samba.org>
    
    
o   Jim McDonough <jmcd@samba.org>


o   Stefan Metzmacher <metze@samba.org>
    

o   Tim Potter <tpot@samba.org>

    
o   Jelmer Vernooij <jelmer@samba.org>


Changes since 3.0.2pre1
-----------------------

o   Jeremy Allison <jra@samba.org>
    * Revert change that broke Exchange clear text samlogons.
    * Fix gcc 3.4 warning in MS-DFS code.
    
       
o   Andrew Bartlet <abartlet@samba.org>
    * Fix segfault when 'security = ads' but no realm is defined.
    * BUG 722: Allow winbindd to map machine accounts to uids.
    * More cleanups for winbindd's find_our_domain().
    * More clearly detect whether a domain controller is an NT4
      or mixed-mode AD DC (additional bug fixes by jerry & jmcd).
    * Increase separation between DNS queries for hosts and queries
      for AD domain controllers.

    
o   Justin Baugh <justin.baugh@request.com>
    * BUG 948: Implement missing functions required for FreeBSD 
      nss_winbind support. 
      
      
o   Alexander Bokovoy <ab@samba.org>
    * BUG 922: Make sure enable fast path for strlower_m() and 
      strupper_m().
      
      
o   Gerald (Jerry) Carter <jerry@samba.org>
    * Fix several warnings reported by the SUN Forte C compiler.
    * Fully control DNS queries for AD DC's using 'name resolve order'.
    * BUG 770: Send the SMBjobid for UNIX jobs back to the client.
    * BUG 972: Fix segfault in cli_ds_getprimarydominfo().
    * BUG 936: fix bind credentials for schannel binds in smbd.
    * BUG 446: Fix output of smbclient for better compatibility 
      with scripts based on the 2.2 version (including Amanda).
    * BUG 891, 949: Fedora packaging fixes.


o   Luke Howard <lukeh@PADL.COM>